syntax = "proto3";
package state.canister_snapshot_bits.v1;

import "state/canister_state_bits/v1/canister_state_bits.proto";
import "types/v1/types.proto";

enum SnapshotSource {
  SNAPSHOT_SOURCE_UNSPECIFIED = 0;
  SNAPSHOT_SOURCE_TAKEN_FROM_CANISTER = 1;
  SNAPSHOT_SOURCE_UPLOADED_MANUALLY = 2;
}

// `None` corresponds to `CanisterTimer::Inactive`
// `Some(ts)` corresponds to `CanisterTimer::Active(ts)`.
message CanisterTimer {
  optional uint64 global_timer_nanos = 1;
}

message CanisterSnapshotBits {
  uint64 snapshot_id = 1;
  types.v1.CanisterId canister_id = 2;
  uint64 taken_at_timestamp = 3;
  uint64 canister_version = 4;
  bytes certified_data = 5;
  bytes binary_hash = 6;
  canister_state_bits.v1.WasmChunkStoreMetadata wasm_chunk_store_metadata = 7;
  uint64 stable_memory_size = 8;
  uint64 wasm_memory_size = 9;
  uint64 total_size = 10;
  repeated canister_state_bits.v1.Global exported_globals = 11;
  CanisterTimer global_timer = 12;
  optional canister_state_bits.v1.OnLowWasmMemoryHookStatus on_low_wasm_memory_hook_status = 13;
  SnapshotSource source = 14;
}
